SPORT-162: fix controller setup for auth-service
