# auth-service/controller/setup.go
@@ -29,7 +29,7 @@ func Setup(g *gin.RouterGroup, options ...c.Option) {
 	//-- Protected API
 	protected := g.Group("", authMiddleware)
 	protected.GET("/user", UserGet)
-	protected.GET("/user/:id", UserGetById)
+	protected.GET("/user/:userId", UserGetById)
 	protected.PATCH("/user", UserPatch)
 	protected.GET("/rt/token", AblyToken)
 	protected.PUT("/user/image", UserUploadImage)
